	PR debug/26881 	* cgraph.c: Fix comments. 	(cgraph_varpool_mark_needed_node): Mark only variables not already 	output to file. 	* cgraphunit.c: Update comments; include gt-cgraphunit.h 	(cgraph_varpool_assembled_nodes_queue): New static variable. 	(cgraph_varpool_assemble_decl): Record output decls for debug out code. 	(cgraph_varpool_output_debug_info): New function. 	(cgraph_finalize_compilation_unit, cgraph_optimize): Call it. 	* Makefile.in: Add gt-cgraphunit.h 	* gcc.dg/debug/pr26881.c: New file.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116374 138bc75d-0d04-0410-961f-82ee72b054a4